Fix deck squashing the buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,10 +60,7 @@ h1 {
     padding: 5px;
     color: #fbeca3;
 }
-.reset {
-    right: 100%;
-    position: relative;
-}
+
 .reset button {
     background: #000;
     color: #ffca3a;
@@ -196,7 +193,7 @@ h1 {
     flex-wrap: wrap;
     position: relative;
     justify-content: space-around;
-    height: 300px;
+    height: 600px;
     margin-top: 10px;
     margin-bottom: 60px;
     padding-left: 0;
